@@ -1,6 +1,6 @@
        0  0.0000E+00  0.0000E+00  0.0000E+00    0.0000E+00  0.0000E+00  0.0000E+00    1.1787E-01  2.3202E+00  8.6708E-02    2.52482E+00
-       1  2.0000E-02  4.0470E-11  5.0000E+01    3.7924E-11  1.0700E-12  1.4758E-12    1.1787E-01  2.3202E+00  8.6701E-02    2.52481E+00
-       2  4.0000E-02  7.2721E-11  1.4246E+01    6.6701E-11  2.0697E-12  3.9504E-12    1.1787E-01  2.3202E+00  8.6694E-02    2.52481E+00
-       3  6.0000E-02  9.0626E-11  5.4806E+00    8.2760E-11  3.0745E-12  4.7920E-12    1.1787E-01  2.3202E+00  8.6686E-02    2.52480E+00
-       4  8.0000E-02  1.0471E-10  3.6062E+00    9.5349E-11  4.0244E-12  5.3417E-12    1.1787E-01  2.3202E+00  8.6679E-02    2.52479E+00
-       5  1.0000E-01  1.1974E-10  3.3477E+00    1.0836E-10  4.9126E-12  6.4676E-12    1.1787E-01  2.3202E+00  8.6670E-02    2.52478E+00
+       1  2.0000E-02  3.3221E-11  5.0000E+01    3.1183E-11  9.0229E-13  1.1358E-12    1.1787E-01  2.3202E+00  8.6701E-02    2.52481E+00
+       2  4.0000E-02  5.4240E-11  1.2016E+01    4.9672E-11  1.6043E-12  2.9634E-12    1.1787E-01  2.3202E+00  8.6694E-02    2.52481E+00
+       3  6.0000E-02  6.1584E-11  3.1705E+00    5.6131E-11  2.2521E-12  3.2013E-12    1.1787E-01  2.3202E+00  8.6686E-02    2.52480E+00
+       4  8.0000E-02  6.6024E-11  1.7397E+00    6.0089E-11  2.8297E-12  3.1051E-12    1.1787E-01  2.3202E+00  8.6679E-02    2.52479E+00
+       5  1.0000E-01  7.1730E-11  2.0711E+00    6.5130E-11  3.3422E-12  3.2580E-12    1.1787E-01  2.3202E+00  8.6670E-02    2.52479E+00
