@@ -1,3 +1,3 @@
-       2  4.0000E-02  7.2721E-11  5.0000E+01    6.6701E-11  2.0697E-12  3.9504E-12    1.1787E-01  2.3202E+00  8.6694E-02    2.52480E+00
-       3  6.0000E-02  9.0641E-11  5.4846E+00    8.2774E-11  3.0751E-12  4.7919E-12    1.1787E-01  2.3202E+00  8.6687E-02    2.52480E+00
-       4  8.0000E-02  1.0474E-10  3.6080E+00    9.5383E-11  4.0259E-12  5.3304E-12    1.1787E-01  2.3202E+00  8.6679E-02    2.52479E+00
+       2  4.0000E-02  5.4240E-11  5.0000E+01    4.9672E-11  1.6043E-12  2.9634E-12    1.1787E-01  2.3202E+00  8.6694E-02    2.52480E+00
+       3  6.0000E-02  6.1581E-11  3.1690E+00    5.6130E-11  2.2523E-12  3.1981E-12    1.1787E-01  2.3202E+00  8.6687E-02    2.52480E+00
+       4  8.0000E-02  6.6012E-11  1.7367E+00    6.0091E-11  2.8300E-12  3.0913E-12    1.1787E-01  2.3202E+00  8.6679E-02    2.52479E+00
