@@ -1,4 +1,4 @@
        0  0.0000E+00  0.0000E+00  0.0000E+00    0.0000E+00  0.0000E+00  0.0000E+00    1.1786E-01  2.3202E+00  8.6703E-02    2.52481E+00
-       1  1.0000E+00  1.3298E-11  1.0000E+00    1.2013E-11  8.1961E-13  4.6534E-13    1.1786E-01  2.3202E+00  8.6708E-02    2.52479E+00
-       2  2.0000E+00  2.4524E-07  9.9989E-01    3.2562E-08  1.9431E-07  1.8370E-08    1.1786E-01  2.3202E+00  8.6739E-02    2.52484E+00
-       3  3.0000E+00  7.7033E-06  9.3829E-01    2.2266E-06  5.1461E-06  3.3061E-07    1.1785E-01  2.3202E+00  8.6682E-02    2.52479E+00
+       1  1.0000E+00  1.3291E-11  1.0000E+00    1.2010E-11  8.1628E-13  4.6517E-13    1.1786E-01  2.3202E+00  8.6708E-02    2.52480E+00
+       2  2.0000E+00  2.3377E-07  9.9989E-01    3.1236E-08  1.8497E-07  1.7565E-08    1.1786E-01  2.3202E+00  8.6739E-02    2.52484E+00
+       3  3.0000E+00  6.2509E-06  9.2790E-01    1.9846E-06  3.9818E-06  2.8446E-07    1.1785E-01  2.3202E+00  8.6688E-02    2.52479E+00
